welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:4: error: not found: value n
    if (n==2){
        ^